# onnx-shape-inference-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
src/: lib.rs  proto.rs
tests/: mean-reverse-inferred.onnx  mean-reverse.onnx  model-inferred.onnx  model.onnx
