[package]
name = "onnx-shape-inference"
version = "1.1.0"
authors = ["Łukasz Kurowski <crackcomm@gmail.com>"]
edition = "2018"
license = "MIT"
description = "ONNX Shape inference bindings."
homepage = "https://github.com/crackcomm/onnx-shape-inference-rs"
repository = "https://github.com/crackcomm/onnx-shape-inference-rs.git"
build = "build.rs"

[features]
default = ["proto"]
proto = ["onnx-pb", "prost"]

[dependencies]
libc = "^0.2.66"
prost = { version = "^0.6.1", optional = true }
onnx-pb = { version = "^0.1.1", optional = true }

[build-dependencies]
cmake = "^0.1.42"
